--- a/结构说明.md
+++ b/结构说明.md
@@ -20,7 +20,7 @@
 ├── deploy
 │   ├── README.md
 │   └── grafana
-│       └── livekit-server-overview.json
+│       └── livekit-server-overview.json   Grafana监控仪表盘的配置文件，这是一个Grafana仪表盘模板，用于可视化展示LiveKit服务器的各种监控指标。当导入到Grafana后，可以实时查看服务器的运行状态
 ├── pkg
 │   ├── agent
 │   │   ├── agent_test.go
